In-App Purchase updates

--- a/UMSalaryPubV4/StoreKit/PropertyList.plist
+++ b/UMSalaryPubV4/StoreKit/PropertyList.plist
@@ -3,6 +3,6 @@
 <plist version="1.0">
 <dict>
 	<key>2022</key>
-	<string>com.temporary.2022</string>
+	<string>com.frankfurtindustries.umichsalarypub.2022</string>
 </dict>
 </plist>
